--- a/compodoc.css
+++ b/compodoc.css
@@ -24,11 +24,14 @@ body {
     padding: 0px;
     margin: 0px;
 }
+
 .top_content {
     width: 1903px;
     height: 1025px;
+    display: flex;
+    flex-direction: column;
 }
-
+/* 开始标题部分 */
 .top_content_nav {
     background-color: #1c4887;
     width: auto;
@@ -73,4 +76,36 @@ body {
 .nav_right_menu a:hover {
     opacity: 1;
     border-bottom: 1px solid white;
+}
+
+/* 大标题部分 */
+.inner_bg {
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    background-color: #1c4887;
+}
+
+.container {
+    width: 1170px;
+    
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.container_title {
+    font: 38px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    color: white;
+    font-weight: 12;
+    opacity: 0.8;
+}
+.container_describe {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    opacity: 0.8;
+    font-weight: lighter;
+    margin: 10px 0px;
 }
