--- a/compodoc.css
+++ b/compodoc.css
@@ -15,14 +15,24 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.swiper-container{
+    --swiper-theme-color: #ff6600;
+    --swiper-pagination-color: #00ff33;/* 两种都可以 */
+}
+
 div {
     display: block;
 }
 
 body {
-    font-family: 'Roboto';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* flex-direction: column; */
+    width: 1903px;
+    text-align: center;
 }
 
 .top_content {
@@ -30,6 +40,7 @@ body {
     height: 1025px;
     display: flex;
     flex-direction: column;
+    position: static;
 }
 /* 开始标题部分 */
 .top_content_nav {
@@ -89,11 +100,12 @@ body {
 .container {
     width: 1170px;
     
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
+
 .container_title {
     font: 38px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
@@ -101,6 +113,7 @@ body {
     font-weight: 12;
     opacity: 0.8;
 }
+
 .container_describe {
     color: white;
     font-size: 16px;
@@ -108,4 +121,220 @@ body {
     opacity: 0.8;
     font-weight: lighter;
     margin: 10px 0px;
+}
+
+.container_btn {
+    text-align: center;
+    margin: 40px 0px;
+}
+
+.container_all_btn {
+    color: white;
+    width: 120px;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 15px 10px;
+    margin: 0px 10px;
+}
+
+.container_lbtn {
+    background-color: #012b64;
+}
+.container_lbtn:hover {
+    opacity: 0.6;
+}
+
+.container_rbtn {
+    background-color: #c90505;
+}
+
+.container_rbtn:hover {
+    opacity: 0.6;
+}
+
+
+.swiper-container {
+    position: relative; 
+    width: 760px;
+    height: 512px;
+    margin: auto;
+}
+
+
+.rotation_img {
+    margin-bottom: 10px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 760px;
+    opacity: 0;
+    transition: 2s;
+}
+.rotation_img:nth-child(1){
+    opacity: 1;
+}
+
+.section_content {
+    display: inline-flex;
+    justify-content: center;
+    width: 1903px;
+}
+
+.section_content_item {
+    padding: 5px;
+}
+
+.section_content_txtbtn {
+    margin: 5px;
+    height: 20px;
+    border: 1px solid #757373;
+    border-radius: 5px;
+}
+
+.section_txtbtn_all {
+    text-decoration: none;
+    color: #000;
+    font-size: 15px;
+    line-height: 20px;
+    padding: 0px;
+}
+
+.txtbtn_left {
+    padding-right: 5px;
+    border-right: 1px solid #757373;
+}
+
+.txtbtn_left:hover {
+    background-color: #e1e2e1;
+}
+.txtbtn_right:hover {
+    color: blue;
+}
+
+.feature_content{
+    width: 1903px;
+    text-align: center;
+   
+}
+
+.content_title {
+    font: 38px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.feature_box {
+    width: 1903px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+
+.feature_box_table {
+    width: 1170px;
+}
+
+.feature_box_table_td{
+    text-align: center;
+    width: 360px;
+    color: rgb(97, 96, 96);
+}
+
+.feature_box_table_td>h3 {
+    font-size: 22px;
+    font-weight: lighter;
+}
+.feature_box_table_td>p {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.learnmore {
+   display: block;
+   width: 122px;
+   height: 50px;
+    background-color: rgb(178, 178, 178);
+    color: #fff;
+    border-radius: 5px;
+    margin: auto;
+    text-decoration: none;
+    line-height: 50px;
+}
+
+.learnmore:hover {
+    opacity: 0.5;
+}
+
+.getting_content {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.getting_content_decoration {
+    font-size: 22px;
+}
+
+
+.beautiful_themes_row {
+    display: inline-block;
+}
+
+.themes>img {
+    width: 555px;
+}
+
+.themes {
+    width: 555px;
+}
+.beautiful_themes_row {
+    display: flex;
+    justify-content: center;
+}
+
+.useCompodoc {
+    display: flex;
+    justify-content: center;
+}
+
+.useCompodoc_item {
+    width: 360px;
+    text-align: center;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.useCompodoc_item_btn {
+    background-color: red ; color:#fff; width: 87px; height: 50px; line-height: 50px;
+    align-self: center;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.useCompodoc_item_btn:hover {
+    opacity: 0.6;
+}
+ 
+.footer_content {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.logo {
+    background-image: url(./images/logo1.PNG);
+    display: block;
+    width: 50px;
+    height: 50px;
+    align-self: center;
+    background-repeat: no-repeat;
+}
+.logo:hover {
+    background-image: url(./images/logo2.PNG);
+    
+}
+
+.footer_text {
+    font-size: 16px;
 }
