--- a/compodoc.css
+++ b/compodoc.css
@@ -25,6 +25,8 @@ div {
 }
 
 body {
+    
+    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
@@ -36,6 +38,7 @@ body {
 }
 
 .top_content {
+    
     width: 1903px;
     height: 1025px;
     display: flex;
@@ -52,7 +55,7 @@ body {
 }
 
 .nav_header {
-  
+   
     width: 1170px;
     height: auto;
 }
@@ -112,6 +115,7 @@ body {
     color: white;
     font-weight: 12;
     opacity: 0.8;
+    cursor: pointer;
 }
 
 .container_describe {
@@ -140,6 +144,7 @@ body {
 
 .container_lbtn {
     background-color: #012b64;
+    border: 1px solid white;
 }
 .container_lbtn:hover {
     opacity: 0.6;
@@ -239,6 +244,14 @@ body {
     color: rgb(97, 96, 96);
 }
 
+.box_table_td_one:nth-child(odd) {
+    background-color: #f8f8f8;
+}
+
+.box_table_td_two:nth-child(even){
+    background-color: #f8f8f8;
+}
+
 .feature_box_table_td>h3 {
     font-size: 22px;
     font-weight: lighter;
@@ -322,16 +335,16 @@ body {
 
 }
 
+
 .logo {
-    background-image: url(./images/logo1.PNG);
+   /* color: #f8f8f8; */
     display: block;
     width: 50px;
     height: 50px;
     align-self: center;
-    background-repeat: no-repeat;
 }
 .logo:hover {
-    background-image: url(./images/logo2.PNG);
+   color: #3598db;
     
 }
 
